--- a/package.json
+++ b/package.json
@@ -2,34 +2,48 @@
   "name": "swap-it",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
+    "dev": "concurrently \"npm run dev:next\" \"npm run dev:socket\"",
+    "dev:next": "next dev",
+    "dev:socket": "node socket-server.mjs",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@prisma/client": "^6.17.0",
     "@vercel/blob": "^2.0.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
+    "concurrently": "^9.2.1",
+    "dotenv": "^17.2.3",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.22",
+    "jsonwebtoken": "^9.0.3",
+    "lucide": "^0.555.0",
+    "lucide-react": "^0.555.0",
     "next": "15.5.4",
+    "next-pwa": "^5.6.0",
     "prisma": "^6.17.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
