--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,9 +7,16 @@
   "theme_color": "#4f46e5",
   "icons": [
     {
-      "src": "/next.svg",
+      "src": "/icons/icon-192.svg",
       "sizes": "192x192",
-      "type": "image/svg"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-512.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
   ]
 }
