--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:next": "next dev",
     "dev:socket": "node socket-server.mjs",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "start:prod": "concurrently \"node socket-server.mjs\" \"next start -p 3000\""
   },
   "dependencies": {
     "@prisma/client": "^6.17.0",
