--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run dev:next\" \"npm run dev:socket\"",
+    "dev": "next dev",
+    "dev:full": "concurrently \"npm run dev:next\" \"npm run dev:socket\"",
     "dev:next": "next dev",
     "dev:socket": "node socket-server.mjs",
     "build": "next build",
     "start": "next start",
-    "start:prod": "concurrently \"node socket-server.mjs\" \"next start -p 3000\""
+    "start:prod": "concurrently \"node socket-server.mjs\" \"next start -p 3000\"",
+    "socket": "node socket-server.mjs"
   },
   "dependencies": {
     "@prisma/client": "^6.17.0",
