--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "dev:full": "concurrently \"npm run dev:next\" \"npm run dev:socket\"",
+    "dev": "concurrently \"npx dotenv -e .env.local -- prisma generate\" \"npm run dev:next\" \"npm run dev:socket\"",
     "dev:next": "next dev",
-    "dev:socket": "node socket-server.mjs",
+    "dev:socket": "npx dotenv -e .env.local -- node socket-server.mjs",
+    "prisma:generate": "npx prisma generate",
     "build": "next build",
     "start": "next start",
     "start:prod": "concurrently \"node socket-server.mjs\" \"next start -p 3000\"",
