--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "next build",
     "start": "next start",
     "start:prod": "concurrently \"node socket-server.mjs\" \"next start -p 3000\"",
-    "socket": "node socket-server.mjs"
+    "socket": "node socket-server.mjs",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.17.0",
